# voice-multi-agent-accelerator

./: .dockerignore  .env  .env.template  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  azure.yaml
.github/chatmodes/: Azure_Static_Web_App.chatmode.md
docs/: DOCUMENTATION_UPDATE_SUMMARY.md  TROUBLESHOOTING.md  VOICE_LIVE_API_RACE_CONDITION.md  agent-management.md
docs/agent-prompts/: ActionAgent.md  InfoAgent.md  OrchestratorAgent.md  PatientContextAgent.md
docs/deployment/: AZURE_INFRASTRUCTURE_DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS_REPORT.md
docs/implementation-guides/: AZURE_AI_FOUNDRY_AGENT_INSTRUCTIONS.md  README.md  SOLUTION_B_IMPLEMENTATION_PLAN.md  (+1 more)
infra/: main.bicep
obsolete-files/: README.md  app_voice_live.py  plugins.py  voice_live_agent_handler.py
server/: .env.example  Dockerfile  README.md  app_voice_live.py  app_voice_live_agent_mode.py  logging_config.py  orchestrator.py  plugins.py  pyproject.toml  requirements.txt  server.py  test_full_orchestration_flow.py  test_send_immediate.py  test_simulated_tts.py  test_voice_live_websocket.py  voice_live_agent_handler_agent_mode.py  voice_live_handler.py
server/agent_prompts/: ActionAgent.md  FamilyHistoryAgent.md  PatientContextAgent.md
server/agent_prompts/agents/: ActionAgent.md  InfoAgent.md  OrchestratorAgent.md
server/agent_prompts/tools/CardiologyAgent/: extract_symptoms.md  recommend_tests.md
server/agent_prompts/tools/FamilyHistoryAgent/: start_dialog.md  summarize_answers.md
server/plugins/: ActionAgent.py  CardiologyAgent.py  CaregiverPlugin.py  InfoAgent.py  PatientContextAgent.py  __init__.py  family_history_agent.py  utils.py
server/static/: agents.css  agents.html  agents.js  audio-processor.js  chat.html  index.html  manage.html  markdown-editor.js  sidebar.js  style.css  voice_test.html
server/static/styles/: main.css
(+11 files in other folders)
