[project]
name = "voice-multi-agent-accelerator-backend"
version = "0.1.0"
description = "Backend service for MedOrchestrator"
authors = [ { name = "Team", email = "team@example.com" } ]
requires-python = ">=3.12"
dependencies = [
  "fastapi~=0.111.0",
  "uvicorn[standard]~=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest~=8.2.0",
  "httpx~=0.27.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
